--- a/notebooks/logistic_regression.ipynb
+++ b/notebooks/logistic_regression.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Perceptron\n",
+    "# Logistic Regression\n",
     "\n",
-    "The dataset was obtained from https://archive.ics.uci.edu/ml/datasets/Iris."
+    "The dataset was obtained from https://archive.ics.uci.edu/ml/datasets/gene+expression+cancer+RNA-Seq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -68,84 +68,82 @@
     "labels = labels.iloc[:, 1:]\n",
     "print(labels.info())\n",
     "labels = labels.values.flatten()\n",
+    "# pre-processing data by encoding string labels to integers\n",
     "label2id = {\n",
-    "    'BRCA' : 1,\n",
-    "    'COAD' : 2,\n",
-    "    'KIRC' : 3,\n",
-    "    'LUAD' : 4,\n",
-    "    'PRAD' : 5\n",
+    "    'BRCA' : 0,\n",
+    "    'COAD' : 1,\n",
+    "    'KIRC' : 2,\n",
+    "    'LUAD' : 3,\n",
+    "    'PRAD' : 4\n",
     "}\n",
     "labels = np.array([label2id[label] for label in labels])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Perceptron:\n",
+    "class LogisticRegression:\n",
     "    def __init__(self, X, Y, N):\n",
     "        self.N = N\n",
+    "        # feature averages for respective labels\n",
+    "        self.f_avg = np.array([X[Y == label].mean(axis=0) for label in np.unique(Y)])\n",
     "        # size of weights array must be equal to the number of features\n",
-    "        self.weights = np.zeros([1, X.shape[1]])\n",
+    "        self.weights = np.random.random([1, X.shape[1]])\n",
     "        self.bias = 0\n",
-    "        # setting average parameters\n",
-    "        self.avg_weights = np.zeros([1, X.shape[1]])\n",
-    "        self.avg_bias = 0\n",
     "        self.train(X,Y)\n",
-    "\n",
-    "    def parameter_averaging(self):\n",
-    "        self.weights = self.avg_weights\n",
-    "        self.bias = self.avg_bias\n",
-    "        return\n",
+    "    \n",
+    "    def features(self, x):\n",
+    "        # feature vector of a datapoint is its projection on the feature averages\n",
+    "        return ((self.f_avg.T * np.diag(x.dot(self.f_avg.T)/\n",
+    "                                              self.f_avg.dot(self.f_avg.T))).T)\n",
     "\n",
     "    def train(self, X, Y):\n",
-    "        c = 0\n",
     "        for _ in range(self.N):\n",
     "            # process each data point\n",
     "            for i in range(X.shape[0]):\n",
     "                Yi_hat = int(self.predict(X[i,:]))\n",
     "                # check if incorrect\n",
     "                if Y[i] != Yi_hat:\n",
-    "                    # update non-averaged parameters\n",
+    "                    # update parameters\n",
     "                    self.weights += Y[i] * X[i,:]\n",
     "                    self.bias += Y[i]\n",
-    "                    # update averaged parameters\n",
-    "                    self.avg_weights += c * Y[i] * X[i,:]\n",
-    "                    self.avg_bias += c * Y[i]\n",
-    "                c += 1\n",
-    "        self.avg_weights = self.weights - self.avg_weights*1./c\n",
-    "        self.avg_bias = self.bias - self.avg_bias*1./c  \n",
-    "        return\n",
     "\n",
-    "    def predict(self, X):\n",
-    "        # decision rule (X . wT + b) > 0 \n",
-    "        # from (true, false) -> (1, 0) -> (1, -1)\n",
-    "        return ((X.dot(self.weights.T) + self.bias > 0).astype(int) * 2.0 - 1).flatten()\n",
+    "    def predict_batch(self, X):\n",
+    "        return np.array([self.predict(x) for x in X])\n",
+    "    \n",
+    "    def predict(self, x):\n",
+    "        # decision rule: argmax_y[exp(w.f(x,y)^T) / sum_y(exp(w.f(x,y)^T))]\n",
+    "        w_f = self.weights.dot(self.features(x).T)\n",
+    "        # normalizing w_f because of overflow error\n",
+    "        w_f = np.exp(w_f / w_f.sum())\n",
+    "        return np.argmax(w_f)\n",
     "\n",
     "    def calculate_accuracy(self, X_test, Y_test):\n",
-    "        Y_pred = self.predict(X_test)\n",
+    "        Y_pred = self.predict_batch(X_test)\n",
     "        return np.sum(np.equal(Y_pred, Y_test), dtype=float) / len(Y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.4079601990049751\n"
+      "Accuracy:  0.9800995024875622\n"
      ]
     }
    ],
    "source": [
-    "ptron = Perceptron(data[:600], labels[:600], 10)\n",
-    "ptron.parameter_averaging()\n",
-    "print(\"Accuracy: \", ptron.calculate_accuracy(data[600:], labels[600:]))"
+    "# 75-25% split\n",
+    "train_len = 600\n",
+    "log_reg = LogisticRegression(data[:train_len], labels[:train_len], 1)\n",
+    "print(\"Accuracy: \", log_reg.calculate_accuracy(data[train_len:], labels[train_len:]))"
    ]
   }
  ],
